--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -100,8 +100,8 @@ jobs:
       if: inputs.branch_to_test == 'v2.x'
       run: |
         cd aiverify-portal
+        rm pnpm-lock.yaml package-lock.json
         npm install --omit=dev
-        rm pnpm-lock.yaml
         bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-portal --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-portal_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
         mv aiverify_portal_v2_x_Black_Duck_Notices_Report.txt NOTICE.md
         cd ../
