--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "opencv-python==4.10.0.84",
     "scikit-image==0.24.0",
     "aiverify-test-engine>=2.0.0a1",
+    "albumentations==2.0.4"
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
