--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "scipy==1.14.1",
     "scikit-image==0.24.0",
     "aiverify-test-engine>=2.0.0a1",
+    "albumentations==2.0.4",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
