--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scikit-image==0.24.0",
     "wand==0.6.13",
     "aiverify-test-engine>=2.0.0a1",
+    "albumentations==2.0.4",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
