--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "pandas==2.2.2",
     "pillow==10.4.0",
     "aiverify-test-engine>=2.0.0a1",
+    "albumentations==2.0.4",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
