--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -100,7 +100,7 @@ jobs:
       if: inputs.branch_to_test == 'v2.x'
       run: |
         cd aiverify-portal
-        rm pnpm-lock.yaml package-lock.json
+        rm package-lock.json
         npm -v
         npm install --omit=dev --omit=optional
         bash <(curl -s -L https://detect.blackduck.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=0 --detect.project.name=aiverify-portal --detect.project.version.name=$BRANCH --detect.source.path=. --detect.code.location.name="aiverify-portal_$BRANCH" --detect.excluded.directories=tests --blackduck.trust.cert=true --detect.notices.report=true --detect.notices.report.path=.
