Change exclude to include in digital corruption

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
@@ -29,8 +29,7 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--exclude",
-        "brightness_up",
+        "--include",
         "contrast_down",
         "perspective",
         "--brightness_down_factor",
