Change exclude to include in environment corruption

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/.vscode/launch.json
@@ -29,8 +29,9 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--exclude",
-        "snow",
+        "--include",
+        "fog",
+        "rain",
         "--rain_type",
         "drizzle",
         "heavy",
