Change exclude to include in general corruption

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
@@ -29,8 +29,9 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--exclude",
-        "poisson_noise",
+        "--include",
+        "gaussian_noise",
+        "salt_and_pepper_noise",
         "--salt_and_pepper_noise_amount",
         "0.1",
         "0.2",
