Rename Perspective to Random Perspective

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
@@ -31,12 +31,12 @@
         "file_name",
         "--include",
         "contrast_down",
-        "perspective",
+        "random_perspective",
         "--brightness_down_factor",
         "0.1",
         "0.3",
         "0.5",
-        "--perspective_sigma",
+        "--random_perspective_sigma",
         "1.0",
         "1.5",
         "2.0",
