--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "^7.0.0",
     "jsoneditor": "^10.1.1",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mdx-bundler": "^10.0.3",
     "next": "15.1.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
