--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -23,10 +23,13 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.59.20",
+    "@types/ace": "^0.0.52",
     "@types/jsoneditor": "^9.9.5",
     "@types/mdx": "^2.0.13",
+    "ace": "^1.3.0",
     "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
+    "exceljs":"4.4.0",
     "esbuild": "^0.24.2",
     "fuse.js": "^7.0.0",
     "jsoneditor": "^10.1.1",
