--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -29,8 +29,8 @@
     "ace": "^1.3.0",
     "ace-builds": "^1.36.4",
     "class-variance-authority": "^0.7.0",
-    "exceljs":"4.4.0",
     "esbuild": "^0.24.2",
+    "exceljs": "4.4.0",
     "fuse.js": "^7.0.0",
     "jsoneditor": "^10.1.1",
     "jszip": "^3.10.1",
@@ -45,6 +45,7 @@
     "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vanilla-tilt": "^1.8.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
