--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/.vscode/launch.json
@@ -29,7 +29,7 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--include",
+        "--corruptions",
         "horizontal_motion_blur",
         "zoom_blur",
         "--horizontal",
