Apply changes 2227696 to 03f22ab on digital corruptions

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/.vscode/launch.json
@@ -29,7 +29,7 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--include",
+        "--corruptions",
         "contrast_down",
         "random_perspective",
         "--brightness_down_factor",
