Apply changes 2227696 to 03f22ab on general corruptions

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/.vscode/launch.json
@@ -29,7 +29,7 @@
         "10",
         "--file_name_label",
         "file_name",
-        "--include",
+        "--corruptions",
         "gaussian_noise",
         "salt_and_pepper_noise",
         "--salt_and_pepper_noise_amount",
