added test_run router

--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
   "jsonschema==4.*",
   "pydantic==2.*",
   "openapi-spec-validator==0.*",
+  "valkey[libvalkey]==6.*",
 ]
 
 [tool.hatch.envs.default]
