--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/pyproject.toml
@@ -7,13 +7,8 @@ dependencies = [
     "numpy==1.26.4",
     "pandas==2.2.2",
     "pillow==10.4.0",
-    "joblib==1.4.2",
-    "scikit-learn==1.5.2",
-    "scipy==1.14.1",
-    "opencv-python==4.10.0.84",
-    "scikit-image==0.24.0",
-    "wand==0.6.13",
     "aiverify-test-engine>=2.0.0a1",
+    "albumentations>=2.0.4",
 ]
 requires-python = ">=3.10,<3.12"
 dynamic = ["version"]
