Test Root Path Variable

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -65,8 +65,8 @@ jobs:
           cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/
           pip install -e .
           python -m aiverify_digital_corruptions \
-            --data_path ${{ env.ROOT_PATH }}/data/raw_fashion_image_10 \
-            --model_path ${{ env.ROOT_PATH }}/pipeline/multiclass_classification_image_mnist_fashion \
+            --data_path $ROOT_PATH/data/raw_fashion_image_10 \
+            --model_path $ROOT_PATH/pipeline/multiclass_classification_image_mnist_fashion \
             --ground_truth_path ${{ env.ROOT_PATH }}/data/pickle_pandas_fashion_mnist_annotated_labels_10.sav \
             --ground_truth label \
             --model_type CLASSIFICATION \
