--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -61,11 +61,12 @@ jobs:
           source .venv/bin/activate
           pip install -e .
           cd ${GITHUB_WORKSPACE}
+          echo $ROOT_PATH
+          echo ${{ env.ROOT_PATH }}
+          echo "Test"
           echo "ROOT_PATH=${GITHUB_WORKSPACE}/stock-plugins/user_defined_files" >> $GITHUB_ENV
           cd stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/
           pip install -e .
-          echo $ROOT_PATH
-          echo ${{ env.ROOT_PATH }}
           python -m aiverify_digital_corruptions \
             --data_path $ROOT_PATH/data/raw_fashion_image_10 \
             --model_path $ROOT_PATH/pipeline/multiclass_classification_image_mnist_fashion \
